--- a/index.html
+++ b/index.html
@@ -237,29 +237,42 @@
     </section>
 
     <section id="contact" class="contact-section section-wrapper">
-         <div class="section-background theme-cream">
-            <div class="floating-elements">
-                <div class="floating-triangle" style="opacity: 0.04;"></div>
-                <div class="floating-circle circle-2"></div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <span class="section-tagline">Let's Connect</span>
-                <h2 class="section-title">Ready to Transform Your Space?</h2>
-            </div>
-            <form id="contactForm" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST" class="contact-form" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
-                <div class="form-group"><input type="text" name="name" placeholder="Full Name" required></div>
-                <div class="form-group"><input type="email" name="email" placeholder="Email Address" required></div>
-                <div class="form-group"><input type="tel" name="phone" placeholder="Phone Number"></div>
-                <div class="form-group">
-                    <select name="projectType" required><option value="">Project Type</option><option value="residential">Residential</option><option value="commercial">Commercial</option></select>
-                </div>
-                <div class="form-group" style="grid-column: 1 / -1;"><textarea name="message" placeholder="Tell us about your dream space..." rows="5" required></textarea></div>
-                <button type="submit" class="btn-primary">Start Your Project</button>
-            </form>
-        </div>
-    </section>
+     <div class="section-background theme-cream">
+         <div class="floating-elements">
+             <div class="floating-triangle" style="opacity: 0.04;"></div>
+             <div class="floating-circle circle-2"></div>
+         </div>
+     </div>
+     <div class="container">
+         <div class="section-header" data-aos="fade-up">
+             <span class="section-tagline">Let's Connect</span>
+             <h2 class="section-title">Ready to Transform Your Space?</h2>
+         </div>
+         
+         <form id="contactForm" action="https://formspree.io/f/xgvppkpq" method="POST" class="contact-form" data-aos="fade-up" style="max-width: 800px; margin: 0 auto;">
+             <div class="form-group"><input type="text" name="name" placeholder="Full Name" required></div>
+             <div class="form-group"><input type="email" name="email" placeholder="Email Address" required></div>
+             <div class="form-group"><input type="tel" name="phone" placeholder="Phone Number"></div>
+             <div class="form-group">
+                 <select name="projectType" required><option value="">Project Type</option><option value="residential">Residential</option><option value="commercial">Commercial</option></select>
+             </div>
+             <div class="form-group" style="grid-column: 1 / -1;"><textarea name="message" placeholder="Tell us about your dream space..." rows="5" required></textarea></div>
+             <button type="submit" class="btn-primary">Start Your Project</button>
+         </form>
+
+         <div class="contact-details-box" data-aos="fade-up" data-aos-delay="100">
+             <h3>Or Contact Us Directly</h3>
+             <p>
+                 <i class="fas fa-envelope"></i>
+                 mail : harsha.cozycove@gmail.com
+             </p>
+             <p>
+                 <i class="fas fa-phone"></i>
+                 phone number : +91 9493523445
+             </p>
+         </div>
+         </div>
+</section>
 
     <div class="blog-modal" id="blogModal">
         <div class="blog-modal-overlay"></div>
