feat: Implement new Brandy Rose color theme

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </div>
         <div class="hero-content">
             <div data-aos="fade-up" data-aos-duration="1200">
-                <h1 class="hero-title-main">Elegance lives here.</h1>
-                <p class="hero-title-sub">So will you.</p>
+                <h1 class="hero-title-main">Making Every Space Feel Like Home.</h1>
+                <p class="hero-title-sub">Every corner matters — because your home deserves nothing less.</p>
                 <p class="hero-description">
-                    Transform your space into a luxurious sanctuary where every detail reflects your refined taste and personal story.
+                    We blend comfort, creativity, and craftsmanship to design interiors that feel like a cozy retreat.
                 </p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn-primary">Start Your Journey</a>
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="section-header" data-aos="fade-up">
                 <span class="section-tagline">Crafting Dreams</span>
-                <h2 class="section-title">Where luxury meets livability</h2>
+                <h2 class="section-title">Designing homes that match your lifestyle</h2>
             </div>
             <div class="about-content">
                 <div data-aos="fade-right">
@@ -132,19 +132,27 @@
             <div class="services-grid">
                 <div class="service-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="service-icon"><i class="fas fa-home"></i></div>
-                    <h3>Residential Design</h3><p>Complete home transformations that reflect your lifestyle.</p>
+                    <h3>Home Interiors</h3><p>Beautifully designed living spaces that reflect your lifestyle and personality.</p>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="service-icon"><i class="fas fa-building"></i></div>
-                    <h3>Commercial Spaces</h3><p>Environments that inspire productivity and leave impressions.</p>
+                    <h3>Modular Kitchens</h3><p>Smart, stylish, and functional kitchens designed for everyday comfort.</p>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="service-icon"><i class="fas fa-cube"></i></div>
-                    <h3>3D Visualization</h3><p>See your dreams come to life with photorealistic renders.</p>
+                    <h3>Renovations & Makeovers</h3><p>Transform old spaces into modern, inviting homes.</p>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                     <div class="service-icon"><i class="fas fa-palette"></i></div>
-                    <h3>Color Consultation</h3><p>Expert guidance in selecting the perfect color palette.</p>
+                    <h3>False Ceiling & Lighting Design</h3><p>Enhancing ambience through creative ceiling patterns and soft lighting.</p>
+                </div>
+                <div class="service-card" data-aos="fade-up" data-aos-delay="400">
+                    <div class="service-icon"><i class="fas fa-palette"></i></div>
+                    <h3>Furniture & Décor Styling</h3><p>Elegant furniture and décor selections to complete your home’s look.</p>
+                </div>
+                <div class="service-card" data-aos="fade-up" data-aos-delay="400">
+                    <div class="service-icon"><i class="fas fa-palette"></i></div>
+                    <h3>Turnkey Interior Solutions</h3><p>From design to delivery — we handle it all, stress-free.</p>
                 </div>
             </div>
         </div>
@@ -164,15 +172,15 @@
             </div>
             <div class="portfolio-grid">
                 <div class="portfolio-item large" data-aos="fade-up">
-                    <a href="images/MS1.png" class="glightbox" data-gallery="gallery-sanctuary"><div class="portfolio-image portfolio-img-1"></div><div class="portfolio-overlay"><div class="portfolio-content"><h3>Modern Sanctuary</h3><p>Minimalist luxury living</p><span class="portfolio-btn">View Project</span></div></div></a>
+                    <a href="images/MS1.png" class="glightbox" data-gallery="gallery-sanctuary"><div class="portfolio-image portfolio-img-1"></div><div class="portfolio-overlay"><div class="portfolio-content"><h3>Family space</h3><p>Minimalist luxury living</p><span class="portfolio-btn">View Project</span></div></div></a>
                     <a href="images/MS2.png" class="glightbox" data-gallery="gallery-sanctuary" style="display: none;"></a>
                 </div>
                 <div class="portfolio-item" data-aos="fade-up" data-aos-delay="100">
-                    <a href="images/CK1.png" class="glightbox" data-gallery="gallery-kitchen"><div class="portfolio-image portfolio-img-2"></div><div class="portfolio-overlay"><div class="portfolio-content"><h3>Cozy Kitchen</h3><p>Warmth meets function</p><span class="portfolio-btn">View Project</span></div></div></a>
+                    <a href="images/CK1.png" class="glightbox" data-gallery="gallery-kitchen"><div class="portfolio-image portfolio-img-2"></div><div class="portfolio-overlay"><div class="portfolio-content"><h3>culinary space</h3><p>Warmth meets function</p><span class="portfolio-btn">View Project</span></div></div></a>
                     <a href="images/CK2.png" class="glightbox" data-gallery="gallery-kitchen" style="display: none;"></a><a href="images/CK3.png" class="glightbox" data-gallery="gallery-kitchen" style="display: none;"></a>
                 </div>
                 <div class="portfolio-item" data-aos="fade-up" data-aos-delay="200">
-                     <a href="images/EB1.png" class="glightbox" data-gallery="gallery-bedroom"><div class="portfolio-image portfolio-img-3"></div><div class="portfolio-overlay"><div class="portfolio-content"><h3>Elegant Bedroom</h3><p>Peaceful retreat</p><span class="portfolio-btn">View Project</span></div></div></a>
+                     <a href="images/EB1.png" class="glightbox" data-gallery="gallery-bedroom"><div class="portfolio-image portfolio-img-3"></div><div class="portfolio-overlay"><div class="portfolio-content"><h3>cozy bedroom</h3><p>Peaceful retreat</p><span class="portfolio-btn">View Project</span></div></div></a>
                     <a href="images/EB2.png" class="glightbox" data-gallery="gallery-bedroom" style="display: none;"></a><a href="images/EB3.png" class="glightbox" data-gallery="gallery-bedroom" style="display: none;"></a><a href="images/EB4.png" class="glightbox" data-gallery="gallery-bedroom" style="display: none;"></a><a href="images/EB5.png" class="glightbox" data-gallery="gallery-bedroom" style="display: none;"></a><a href="images/EB6.png" class="glightbox" data-gallery="gallery-bedroom" style="display: none;"></a>
                 </div>
                 <div class="portfolio-item wide" data-aos="fade-up" data-aos-delay="300">
